--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
-    "mysql2": "^3.7.0"
+    "mysql2": "^3.7.0",
+    "nodemailer": "^6.9.8"
   }
 }
